# trapdoor-1.0

./: .gitignore  Dockerfile  README.md  ROADMAP.md  connector.py  pyproject.toml  server.py  trapdoor-local.sh  trapdoor.rb
.github/workflows/: release.yml
trapdoor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
